# konfig-cpp

./: .gitignore  CMakeLists.txt  README.md  fields.cpp.disabled  konfig.cpp  konfig.h
tests/: CMakeLists.txt  from_empty.cpp  test_main.cpp  test_utils.h
